port to 1.18 (worldgen is very broken)